--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hexlet",
   "version": "1.0.0",
+  "type": "module",
   "description": "Мой первый проект на Хекслете",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "git+https://github.com/yuliia-myslyvets/hexlet-js.git"
   },
   "author": "Yuliia Myslyvets  <yuliia.myslyvets@gmail.com>",
